<?xml version="1.0"?>
<package format="2">
  <name>signal_scope</name>
  <version>0.0.0</version>
  <description>The signal_scope package</description>

  <maintainer email="mfallon@todo.todo">mfallon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>python_qt</depend>
  <depend>topic_tools</depend>

  <export>
  </export>
</package>

